--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -54,6 +54,7 @@ html {
 body {
   box-sizing: border-box;
   padding: 1.5rem;
+  background-color: $color-grey-light-1;
 
   @include respond(phone) {
     padding: 0;
