--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -16,7 +16,7 @@
 }
 
 .section-contact {
-  padding: 15rem 0;
+  margin: 15rem 0;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
@@ -28,7 +28,7 @@
 }
 
 .contact {
-  width: 90%;
+  width: 100%;
   background-image: linear-gradient(
       105deg,
       rgba($color-white, 0.9) 0%,
